traefik - enable tls with mkcerts using *.dev.localhost instead of *.localhost to be able to rely on a wildcard (refs #16)

--- a/nexus/docker-compose.yml
+++ b/nexus/docker-compose.yml
@@ -4,16 +4,18 @@ services:
 
   nexus:
     container_name: nexus
-    image: sonatype/nexus3:3.30.1
+    image: sonatype/nexus3:3.40.1
     labels:
       - "traefik.enable=true"
-      # http://nexus.localhost
+      # https://nexus.dev.localhost
       - "traefik.http.routers.nexus.rule=Host(`nexus.${HOST_HOSTNAME}`)"
       - "traefik.http.routers.nexus.service=nexus-service@docker"
+      - "traefik.http.routers.nexus.tls=true"
       - "traefik.http.services.nexus-service.loadbalancer.server.port=8081"
-      # http://registry.localhost
+      # https://registry.dev.localhost/v2/_catalog
       - "traefik.http.routers.registry.rule=Host(`registry.${HOST_HOSTNAME}`)"
       - "traefik.http.routers.registry.service=registry-service@docker"
+      - "traefik.http.routers.registry.tls=true"
       - "traefik.http.services.registry-service.loadbalancer.server.port=8082"
     volumes:
       - nexus-data:/nexus-data
