--- a/sonarqube/docker-compose.yml
+++ b/sonarqube/docker-compose.yml
@@ -8,6 +8,9 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.sonarqube.rule=Host(`sonarqube.${HOST_HOSTNAME}`)"
+      - "traefik.http.routers.sonarqube.tls=true"
+    ports:
+      - "127.0.0.1:9000:9000"
     volumes:
       - sonarqube-data:/opt/sonarqube/data
     restart: unless-stopped
