--- a/nextcloud/docker-compose.yml
+++ b/nextcloud/docker-compose.yml
@@ -2,12 +2,13 @@ version: '3.5'
 
 services:
   nextcloud:
-    image: nextcloud:15
+    image: nextcloud:stable
     container_name: nextcloud
     restart: unless-stopped
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.nextcloud.rule=Host(`nextcloud.${HOST_HOSTNAME}`)"
+      - "traefik.http.routers.nextcloud.tls=true"
     volumes:
       - files:/var/www/html
 
