--- a/openldap/.env
+++ b/openldap/.env
@@ -1,6 +1,6 @@
-HOST_HOSTNAME=localhost
-LDAP_ORGANISATION=Dev stacks
-LDAP_DOMAIN=localhost
+HOST_HOSTNAME=dev.localhost
+LDAP_ORGANISATION=devbox
+LDAP_DOMAIN=dev.localhost
 LDAP_ADMIN_PASSWORD=SecretChangeIt
 LDAP_READONLY_USER_PASSWORD=readonly
 
