--- a/openldap/docker-compose.yml
+++ b/openldap/docker-compose.yml
@@ -30,6 +30,7 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.ldapadmin.rule=Host(`ldapadmin.${HOST_HOSTNAME}`)"
+      - "traefik.http.routers.ldapadmin.tls=true"
     restart: unless-stopped
 
 volumes:
