--- a/netdata/docker-compose.yml
+++ b/netdata/docker-compose.yml
@@ -1,8 +1,8 @@
-version: '3'
+version: '3.8'
 services:
   netdata:
     hostname: ${NETDATA_NAME}
-    image: netdata/netdata
+    image: netdata/netdata:stable
     container_name: netdata
     ports:
       - "127.0.0.1:19999:19999"
@@ -22,9 +22,14 @@ services:
     labels:
     - "traefik.enable=true"
     - "traefik.http.routers.netdata.rule=Host(`netdata.${HOST_HOSTNAME}`)"
+    - "traefik.http.routers.netdata.tls=true"
     restart: unless-stopped
 
 volumes:
   netdataconfig:
   netdatalib:
   netdatacache:
+
+networks:
+  default:
+    name: devbox
