--- a/kibana/docker-compose.yml
+++ b/kibana/docker-compose.yml
@@ -4,7 +4,7 @@ services:
 
   kibana:
     container_name: kibana
-    image: docker.elastic.co/kibana/kibana:7.15.2
+    image: docker.elastic.co/kibana/kibana:7.17.5
     environment:
       - "SERVER_NAME=kibana.${HOST_HOSTNAME}"
       - "ELASTICSEARCH_HOSTS=${ES_URL}"
@@ -13,6 +13,8 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.kibana.rule=Host(`kibana.${HOST_HOSTNAME}`)"
+      - "traefik.http.routers.kibana.tls=true"
+      - "traefik.http.services.kibana-service.loadbalancer.server.port=5601"
     restart: unless-stopped
 
 networks:
