--- a/longhorn/manifest/ingress-ui.yaml
+++ b/longhorn/manifest/ingress-ui.yaml
@@ -7,7 +7,7 @@ metadata:
     kubernetes.io/ingress.class: "traefik"
 spec:
   rules:
-    - host: longhorn.localhost
+    - host: longhorn.dev.localhost
       http:
         paths:
           - path: /
