geoserver - enable tls (refs #16)

--- a/geonetwork/docker-compose.yml
+++ b/geonetwork/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.geonetwork.rule=Host(`geonetwork.${HOST_HOSTNAME}`)"
+      - "traefik.http.routers.geonetwork.tls=true"
     environment:
       - DATA_DIR:/var/lib/geonetwork_data
     volumes:
