--- a/geoserver/docker-compose.yml
+++ b/geoserver/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.geoserver.rule=Host(`geoserver.${HOST_HOSTNAME}`)"
+      - "traefik.http.routers.geoserver.tls=true"
       #- "traefik.http.routers.geoserver.middlewares=cors@file"
     volumes:
       - geoserver-data:/var/geoserver
