--- a/adminer/docker-compose.yml
+++ b/adminer/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     labels:
     - "traefik.enable=true"
     - "traefik.http.routers.adminer.rule=Host(`adminer.${HOST_HOSTNAME}`)"
+    - "traefik.http.routers.adminer.tls=true"
     - "traefik.http.services.adminer-service.loadbalancer.server.port=8080"
     restart: unless-stopped
 
