--- a/drupal/docker-compose.yml
+++ b/drupal/docker-compose.yml
@@ -4,10 +4,11 @@ services:
 
   drupal:
     container_name: drupal
-    image: drupal:9.0.11
+    image: drupal:latest
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.drupal.rule=Host(`drupal.${HOST_HOSTNAME}`)"
+      - "traefik.http.routers.drupal.tls=true"
     volumes:
       - drupal-modules:/var/www/html/modules
       - drupal-profiles:/var/www/html/profiles
