geonetwork - enable tls (refs #16)

--- a/geonetwork/docker-compose.yml
+++ b/geonetwork/docker-compose.yml
@@ -10,7 +10,8 @@ services:
       - "traefik.http.routers.geonetwork.rule=Host(`geonetwork.${HOST_HOSTNAME}`)"
       - "traefik.http.routers.geonetwork.tls=true"
     environment:
-      - DATA_DIR:/var/lib/geonetwork_data
+      - DATA_DIR=/var/lib/geonetwork_data
+      - ES_HOST=es
     volumes:
       - geonetwork-data:/var/lib/geonetwork_data
     restart: unless-stopped
