traefik - disable pilot dashboard

--- a/traefik/traefik.toml
+++ b/traefik/traefik.toml
@@ -70,6 +70,9 @@
   dashboard = true
   debug = false
 
+[pilot]
+  dashboard = false
+
 #-------------------------------------------------------------------
 # Logs
 #-------------------------------------------------------------------
