experimentation with opensearch + fluentd + docker log driver

--- a/fluentd/conf/fluent.conf
+++ b/fluentd/conf/fluent.conf
@@ -1,28 +1,34 @@
-# fluentd/conf/fluent.conf
-
 <source>
   @type forward
   port 24224
   bind 0.0.0.0
 </source>
 
-<match *.**>
-  @type copy
+<filter docker.traefik>
+  @type parser
+  key_name log
+  <parse>
+    @type json
+    time_type string
+  </parse>
+</filter>
 
-  <store>
-    @type elasticsearch
-    host es
-    port 9200
-    logstash_format true
-    logstash_prefix fluentd
-    logstash_dateformat %Y%m%d
-    include_tag_key true
-    type_name access_log
-    tag_key @log_name
-    flush_interval 1s
-  </store>
+# <match *.*>
+#   @type stdout
+# </match>
 
-  <store>
-    @type stdout
-  </store>
+# https://docs.fluentd.org/output/opensearch
+<match docker.*>
+  @type opensearch
+  host opensearch
+  port 9200
+  logstash_format true
+  <buffer>
+    chunk_limit_size 2MB
+    flush_mode interval
+    flush_interval 5.0
+    flush_thread_count 1
+    flush_thread_interval 5.0
+    flush_thread_burst_interval 5.0
+  </buffer>
 </match>
