--- a/traefik/config/traefik.toml
+++ b/traefik/config/traefik.toml
@@ -76,5 +76,8 @@
 #-------------------------------------------------------------------
 # Logs
 #-------------------------------------------------------------------
+[log]
+  format = "json"
+  
 [accessLog]
-
+  format = "json"
