--- a/fluentd/docker-compose.yml
+++ b/fluentd/docker-compose.yml
@@ -4,8 +4,9 @@ services:
 
   fluentd:
     build: .
+    container_name: fluentd
     volumes:
-      - ./conf:/fluentd/etc
+      - ./conf:/fluentd/etc:ro
     ports:
       - "127.0.0.1:24224:24224"
       - "127.0.0.1:24224:24224/udp"
