--- a/traefik/docker-compose-fluentd.yml
+++ b/traefik/docker-compose-fluentd.yml
@@ -12,6 +12,11 @@ services:
       - ./certs:/certs:ro
       - ./config:/etc/traefik:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
+    logging:
+      driver: fluentd
+      options:
+        tag: "docker.traefik"
+        fluentd-address: "localhost:24224"
     userns_mode: 'host'
     privileged: true
     restart: unless-stopped
