OpenSearch + fluentd + docker log driver...

--- a/fluentd/conf/fluent.conf
+++ b/fluentd/conf/fluent.conf
@@ -4,21 +4,23 @@
   bind 0.0.0.0
 </source>
 
-<filter docker.traefik>
+<filter docker.**>
   @type parser
   key_name log
+
+  reserve_data true
+  suppress_parse_error_log true
+  ignore_key_not_exist true
+
   <parse>
     @type json
     time_type string
   </parse>
+
 </filter>
 
-# <match *.*>
-#   @type stdout
-# </match>
-
 # https://docs.fluentd.org/output/opensearch
-<match docker.*>
+<match docker.**>
   @type opensearch
   host opensearch
   port 9200
