--- a/fluentd/docker-compose.yml
+++ b/fluentd/docker-compose.yml
@@ -10,6 +10,9 @@ services:
     ports:
       - "127.0.0.1:24224:24224"
       - "127.0.0.1:24224:24224/udp"
+    # ensure it can start with global config
+    logging:
+      driver: syslog
 
 networks:
   default:
