--- a/whoami/manifest/dev-qtw/kustomization.yaml
+++ b/whoami/manifest/dev-qtw/kustomization.yaml
@@ -4,8 +4,5 @@ kind: Kustomization
 resources:
 - ../base
 
-patches:
-- target:
-    kind: IngressRoute
-    name: whoami
-  path: ingress-patch.json
+patchesStrategicMerge:
+- ./ingress.yaml
