--- a/fluentd/conf/fluent.conf
+++ b/fluentd/conf/fluent.conf
@@ -4,20 +4,15 @@
   bind 0.0.0.0
 </source>
 
+
 <filter docker.**>
   @type parser
+  format json
   key_name log
-
   reserve_data true
   suppress_parse_error_log true
-  ignore_key_not_exist true
-
-  <parse>
-    @type json
-    time_type string
-  </parse>
-
 </filter>
+
 
 # https://docs.fluentd.org/output/opensearch
 <match docker.**>
@@ -34,3 +29,10 @@
     flush_thread_burst_interval 5.0
   </buffer>
 </match>
+
+# <system>
+#   log_level debug
+#   # log_level error
+# </system>
+
+
