review kubernetes deployments (*.localhost -> *.dev.localhost, fix jenkins pvc, allow user to specify namespace,...)

--- a/adminer/manifest/base/ingress.yaml
+++ b/adminer/manifest/base/ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: adminer
 spec:
   rules:
-  - host: adminer.localhost
+  - host: adminer.dev.localhost
     http:
       paths:
       - backend:
