traefik - remove kustomize template

--- a/traefik/manifest/traefik-dashboard-le.yml
+++ b/traefik/manifest/traefik-dashboard-le.yml
@@ -12,6 +12,8 @@ spec:
       services:
         - name: api@internal
           kind: TraefikService
+      # middlewares:
+      #   - name: ipwhitelist-main
   tls:
     certResolver: letsencrypt
 
