fluentd - configure syslog parsing

--- a/fluent/conf/fluent.conf
+++ b/fluent/conf/fluent.conf
@@ -4,6 +4,31 @@
   bind 0.0.0.0
 </source>
 
+<source> 
+  @type tail 
+  path /var/log/auth.log 
+  pos_file /data/auth.pos
+  tag authlog
+  <parse>
+    @type syslog
+    message_format rfc3164
+    with_priority false
+  </parse>
+</source>
+
+
+<source> 
+  @type tail 
+  path /var/log/syslog.log 
+  pos_file /data/syslog.pos
+  tag syslog
+  <parse>
+    @type syslog
+    message_format rfc3164
+    with_priority false
+  </parse>
+</source>
+
 
 <filter docker.**>
   @type parser
@@ -15,7 +40,7 @@
 
 
 # https://docs.fluentd.org/output/opensearch
-<match docker.**>
+<match **>
   @type opensearch
   host opensearch
   port 9200
