--- a/fluent/conf/fluent.conf
+++ b/fluent/conf/fluent.conf
@@ -29,6 +29,18 @@
   </parse>
 </source>
 
+# <source>
+#   @type systemd
+#   filters [{ "_SYSTEMD_UNIT": "docker.service" }]
+#   <storage>
+#     @type local
+#     persistent true
+#     path /data/systemd-docker.pos
+#   </storage>
+#   read_from_head true
+#   tag docker
+# </source>
+
 
 <filter docker.**>
   @type parser
