traefik - IngressRoute - remove useless 'certResolver: letsencrypt' breaking http access

--- a/traefik/manifest/traefik-dashboard-le.yml
+++ b/traefik/manifest/traefik-dashboard-le.yml
@@ -14,6 +14,6 @@ spec:
           kind: TraefikService
       # middlewares:
       #   - name: ipwhitelist-main
-  tls:
-    certResolver: letsencrypt
+  # tls:
+  #   certResolver: letsencrypt
 
