keycloak - upgrade and remove custom theme

--- a/keycloak/.env
+++ b/keycloak/.env
@@ -1,3 +1,9 @@
 HOST_HOSTNAME=dev.localhost
-POSTGRES_USER=postgis
+KEYCLOAK_ADMIN=admin
+KEYCLOAK_ADMIN_PASSWORD=ChangeIt
+
 POSTGRES_PASSWORD=postgis
+
+
+
+
