--- a/keycloak/docker-compose.yml
+++ b/keycloak/docker-compose.yml
@@ -4,28 +4,45 @@ services:
 
   keycloak:
     container_name: keycloak
-    image: jboss/keycloak:13.0.1
+    image: quay.io/keycloak/keycloak:20.0
+    # see https://www.keycloak.org/server/reverseproxy
+    command: start --proxy edge
+    depends_on:
+      - "db"
     environment:
-      - DB_VENDOR=postgres
-      - DB_DATABASE=keycloak
-      - DB_ADDR=postgis
-      - DB_USER=${POSTGRES_USER}
-      - DB_PASSWORD=${POSTGRES_PASSWORD}
+      - KC_HOSTNAME=keycloak.${HOST_HOSTNAME}
+      - KEYCLOAK_ADMIN=${KEYCLOAK_ADMIN}
+      - KEYCLOAK_ADMIN_PASSWORD=${KEYCLOAK_ADMIN_PASSWORD}
+      - KC_DB=postgres
+      - KC_DB_URL=jdbc:postgresql://db/keycloak
+      - KC_DB_USERNAME=keycloak
+      - KC_DB_PASSWORD=${POSTGRES_PASSWORD}
       - KEYCLOAK_WELCOME_THEME=custom
       - KEYCLOAK_DEFAULT_THEME=keycloak
       - PROXY_ADDRESS_FORWARDING=true
-    volumes:
-      - keycloak-data:/opt/jboss/keycloak/standalone
-      - ./custom-theme:/opt/jboss/keycloak/themes/custom:ro
+    # volumes:
+    #   - keycloak-data:/opt/jboss/keycloak/standalone
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.keycloak.rule=Host(`keycloak.${HOST_HOSTNAME}`)"
       - "traefik.http.services.keycloak-service.loadbalancer.server.port=8080"
     restart: unless-stopped
 
+  db:
+    container_name: keycloak_db
+    image: postgres:13
+    environment:
+      - POSTGRES_USER=keycloak
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+    volumes:
+      - keycloak-db-data:/var/lib/postgresql/data
+    restart: unless-stopped
+
 volumes:
   keycloak-data:
     name: keycloak-data
+  keycloak-db-data:
+    name: keycloak-db-data
 
 networks:
   default:
