--- a/nexus/docker-compose.yml
+++ b/nexus/docker-compose.yml
@@ -8,11 +8,11 @@ services:
     labels:
       - "traefik.enable=true"
       # https://nexus.dev.localhost
-      - "traefik.http.routers.nexus.rule=Host(`nexus.${HOST_HOSTNAME}`)"
+      - "traefik.http.routers.nexus.rule=Host(`nexus.${DEVBOX_HOSTNAME}`)"
       - "traefik.http.routers.nexus.service=nexus-service@docker"
       - "traefik.http.services.nexus-service.loadbalancer.server.port=8081"
       # https://registry.dev.localhost/v2/_catalog
-      - "traefik.http.routers.registry.rule=Host(`registry.${HOST_HOSTNAME}`)"
+      - "traefik.http.routers.registry.rule=Host(`registry.${DEVBOX_HOSTNAME}`)"
       - "traefik.http.routers.registry.service=registry-service@docker"
       - "traefik.http.services.registry-service.loadbalancer.server.port=8082"
     volumes:
