--- a/traefik/img/traefik-dev/config/traefik.yaml
+++ b/traefik/img/traefik-dev/config/traefik.yaml
@@ -34,8 +34,8 @@ pilot:
 #-------------------------------------------------------------------
 # Logs
 #-------------------------------------------------------------------
-log:
-  format: "json"
+#log:
+#  format: "json"
   
-accessLog:
-  format: "json"
+#accessLog:
+#  format: "json"
