--- a/vault/docker-compose.yml
+++ b/vault/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     #   - "127.0.0.1:8200:8200"
     labels:
     - "traefik.enable=true"
-    - "traefik.http.routers.vault.rule=Host(`vault.${HOST_HOSTNAME}`)"
+    - "traefik.http.routers.vault.rule=Host(`vault.${DEVBOX_HOSTNAME}`)"
     cap_add:
     - IPC_LOCK
 
