--- a/adminer/docker-compose.yml
+++ b/adminer/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     - ADMINER_DESIGN=nette
     labels:
     - "traefik.enable=true"
-    - "traefik.http.routers.adminer.rule=Host(`adminer.${HOST_HOSTNAME}`)"
+    - "traefik.http.routers.adminer.rule=Host(`adminer.${DEVBOX_HOSTNAME}`)"
     - "traefik.http.services.adminer-service.loadbalancer.server.port=8080"
     restart: unless-stopped
 
