--- a/cloudbeaver/docker-compose.yml
+++ b/cloudbeaver/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     - cloudbeaver-data:/opt/cloudbeaver/workspace
     labels:
     - "traefik.enable=true"
-    - "traefik.http.routers.cloudbeaver.rule=Host(`cloudbeaver.${HOST_HOSTNAME}`)"
+    - "traefik.http.routers.cloudbeaver.rule=Host(`cloudbeaver.${DEVBOX_HOSTNAME}`)"
     - "traefik.http.services.cloudbeaver-service.loadbalancer.server.port=8978"
     restart: unless-stopped
 
