--- a/geonetwork/docker-compose.yml
+++ b/geonetwork/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     image: geonetwork:4.2.0
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.geonetwork.rule=Host(`geonetwork.${HOST_HOSTNAME}`)"
+      - "traefik.http.routers.geonetwork.rule=Host(`geonetwork.${DEVBOX_HOSTNAME}`)"
     environment:
       - DATA_DIR=/var/lib/geonetwork_data
       - ES_HOST=es
