--- a/matomo/docker-compose.yml
+++ b/matomo/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       MATOMO_DATABASE_DBNAME: matomo
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.matomo.rule=Host(`matomo.${HOST_HOSTNAME}`)"
+      - "traefik.http.routers.matomo.rule=Host(`matomo.${DEVBOX_HOSTNAME}`)"
     restart: unless-stopped
 
   db:
