--- a/netdata/docker-compose.yml
+++ b/netdata/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       - /etc/os-release:/host/etc/os-release:ro
     labels:
     - "traefik.enable=true"
-    - "traefik.http.routers.netdata.rule=Host(`netdata.${HOST_HOSTNAME}`)"
+    - "traefik.http.routers.netdata.rule=Host(`netdata.${DEVBOX_HOSTNAME}`)"
     restart: unless-stopped
 
 volumes:
