--- a/openldap/.env
+++ b/openldap/.env
@@ -1,4 +1,4 @@
-HOST_HOSTNAME=dev.localhost
+DEVBOX_HOSTNAME=dev.localhost
 LDAP_ORGANISATION=devbox
 LDAP_DOMAIN=dev.localhost
 LDAP_ADMIN_PASSWORD=SecretChangeIt
