--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -10,16 +10,16 @@ services:
       - "80:80"
       - "443:443"
     environment:
-      - HOST_HOSTNAME=${HOST_HOSTNAME}
+      - DEVBOX_HOSTNAME=${DEVBOX_HOSTNAME}
     volumes:
       - traefik-certs:/certs:rw
       - traefik-config:/etc/traefik:rw
       - /var/run/docker.sock:/var/run/docker.sock:ro
     # permission on /var/run/docker.sock
-    userns_mode: 'host'
-    privileged: true
+    # userns_mode: 'host'
+    # privileged: true
     # removes contraint to share network with traefik
-    network_mode: 'host'
+    # network_mode: 'host'
     restart: unless-stopped
 
 volumes:
