k8s-deploy.sh with DEVBOX_HOSTNAME for traefik and whoami (refs #29)

--- a/whoami/manifest/localhost/ingress.yaml
+++ b/whoami/manifest/localhost/ingress.yaml
@@ -7,8 +7,9 @@ spec:
     - web
     - websecure
   routes:
-    - match: Host(`whoami.dev.quadtreeworld.net`)
+    - match: Host(`whoami.dev.localhost`)
       kind: Rule
       services:
         - name: whoami
           port: 80
+
