--- a/whoami/manifest/qtw-dev/kustomization.yaml
+++ b/whoami/manifest/qtw-dev/kustomization.yaml
@@ -2,7 +2,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- ../base
+- ../localhost
 
-patchesStrategicMerge:
-- ./ingress.yaml
+patches:
+- target:
+    kind: IngressRoute
+    name: whoami
+  path: ingress-patch.json
