--- a/adminer/manifest/localhost/kustomization.yaml
+++ b/adminer/manifest/localhost/kustomization.yaml
@@ -1,10 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-commonLabels:
-  app: adminer
-
 resources:
-  - service.yaml
-  - deployment.yaml
-
+- ../base
+- ./ingress.yaml
