--- a/geonetwork/manifest/base/elasticsearch.yaml
+++ b/geonetwork/manifest/base/elasticsearch.yaml
@@ -3,13 +3,25 @@ kind: Elasticsearch
 metadata:
   name: geonetwork
 spec:
-  # from https://github.com/geonetwork/core-geonetwork/tree/4.2.0/es#manual-installation
+  # from https://github.com/geonetwork/core-geonetwork/tree/4.2.2/es#manual-installation
   version: 7.6.2
   nodeSets:
   - name: default
     count: 1
     config:
       node.store.allow_mmap: false
+    podTemplate:
+      spec:
+        containers:
+        - name: elasticsearch
+          env:
+          - name: ES_JAVA_OPTS
+            value: -Xms256m -Xmx256m
+          resources:
+            requests:
+              memory: 512Mi
+            limits:
+              memory: 512Mi
   http:
     tls:
       selfSignedCertificate:
