--- a/whoami/manifest/localhost/ingress.yaml
+++ b/whoami/manifest/localhost/ingress.yaml
@@ -1,15 +1,16 @@
-apiVersion: traefik.containo.us/v1alpha1
-kind: IngressRoute
+apiVersion: networking.k8s.io/v1
+kind: Ingress
 metadata:
   name: whoami
 spec:
-  entryPoints:
-    - web
-    - websecure
-  routes:
-    - match: Host(`whoami.dev.localhost`)
-      kind: Rule
-      services:
-        - name: whoami
-          port: 80
-
+  rules:
+  - host: whoami.dev.localhost
+    http:
+      paths:
+      - pathType: Prefix
+        path: "/"
+        backend:
+          service:
+            name: whoami
+            port:
+              number: 80
