--- a/openldap/.env
+++ b/openldap/.env
@@ -1,4 +1,6 @@
 DEVBOX_HOSTNAME=dev.localhost
+DEVBOX_PORT_PREFIX=127.0.0.1:
+
 LDAP_ORGANISATION=devbox
 LDAP_DOMAIN=dev.localhost
 LDAP_ADMIN_PASSWORD=SecretChangeIt
