--- a/fluentd/docker-compose.yml
+++ b/fluentd/docker-compose.yml
@@ -10,8 +10,8 @@ services:
       - /var/log:/var/log:ro
       - fluent-data:/data
     ports:
-      - "127.0.0.1:24224:24224"
-      - "127.0.0.1:24224:24224/udp"
+      - "${DEVBOX_PORT_PREFIX}24224:24224"
+      - "${DEVBOX_PORT_PREFIX}24224:24224/udp"
     userns_mode: 'host'
     privileged: true
     # ensure it can start with global fluentd logging
