--- a/netdata/docker-compose.yml
+++ b/netdata/docker-compose.yml
@@ -4,8 +4,8 @@ services:
     hostname: ${NETDATA_NAME}
     image: netdata/netdata:stable
     container_name: netdata
-    ports:
-      - "127.0.0.1:19999:19999"
+    # ports:
+    #   - "19999:19999"
     cap_add:
       - SYS_PTRACE
     security_opt:
