--- a/redis/docker-compose.yml
+++ b/redis/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: redis:6.2-alpine
     container_name: redis
     ports:
-      - '6379:6379'
+      - '${DEVBOX_PORT_PREFIX}6379:6379'
     command: redis-server --save 20 1 --loglevel warning --requirepass ${REDIS_PASSWORD}
     volumes: 
       - redis-data:/data
