traefik - docker - enable prometheus metrics

--- a/traefik/img/traefik-dev/config/traefik.yaml
+++ b/traefik/img/traefik-dev/config/traefik.yaml
@@ -34,8 +34,16 @@ pilot:
 #-------------------------------------------------------------------
 # Logs
 #-------------------------------------------------------------------
-#log:
+
+# https://doc.traefik.io/traefik/observability/logs/
+# log:
 #  format: "json"
-  
-#accessLog:
+
+# https://doc.traefik.io/traefik/observability/access-logs/
+# accessLog:
 #  format: "json"
+
+
+# https://doc.traefik.io/traefik/observability/metrics/overview/
+metrics:
+  prometheus: {}
