--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "vs-kubernetes": {
         "disable-linters": ["resource-limits"]
-    }
+    },
+    "ansible.python.interpreterPath": "/bin/python"
 }
